--- a/registro_main_gui.ui
+++ b/registro_main_gui.ui
@@ -11,11 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Registro - v1.0</string>
+   <string>Registro - v1.1</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>Resources/registro_icon_application.png</normaloff>Resources/registro_icon_application.png</iconset>
+   <iconset resource="resources.qrc">
+    <normaloff>:/Resources/registro_icon_application.png</normaloff>:/Resources/registro_icon_application.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -67,8 +67,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>Resources/add.png</normaloff>Resources/add.png</iconset>
+            <iconset resource="resources.qrc">
+             <normaloff>:/Resources/add.png</normaloff>:/Resources/add.png</iconset>
            </property>
           </widget>
          </item>
@@ -87,8 +87,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>Resources/edit.png</normaloff>Resources/edit.png</iconset>
+            <iconset resource="resources.qrc">
+             <normaloff>:/Resources/edit.png</normaloff>:/Resources/edit.png</iconset>
            </property>
           </widget>
          </item>
@@ -108,8 +108,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>Resources/load.png</normaloff>Resources/load.png</iconset>
+            <iconset resource="resources.qrc">
+             <normaloff>:/Resources/load.png</normaloff>:/Resources/load.png</iconset>
            </property>
           </widget>
          </item>
@@ -129,8 +129,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>Resources/less_than_five.png</normaloff>Resources/less_than_five.png</iconset>
+            <iconset resource="resources.qrc">
+             <normaloff>:/Resources/less_than_five.png</normaloff>:/Resources/less_than_five.png</iconset>
            </property>
           </widget>
          </item>
@@ -199,8 +199,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset>
-             <normaloff>Resources/search.png</normaloff>Resources/search.png</iconset>
+            <iconset resource="resources.qrc">
+             <normaloff>:/Resources/search.png</normaloff>:/Resources/search.png</iconset>
            </property>
           </widget>
          </item>
@@ -217,7 +217,7 @@
      <x>0</x>
      <y>0</y>
      <width>731</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -263,7 +263,7 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="registro_main_gui.qrc"/>
+  <include location="resources.qrc"/>
  </resources>
  <connections/>
 </ui>
