--- a/registro_main_gui.ui
+++ b/registro_main_gui.ui
@@ -114,7 +114,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btnLoadBadVotes">
+          <widget class="QPushButton" name="btnLoadBadElements">
            <property name="styleSheet">
             <string notr="true">#btnLoadBadVotes {
 	background-color: transparent;
@@ -184,7 +184,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="btnSearchElement">
+          <widget class="QPushButton" name="btnSearchElements">
            <property name="styleSheet">
             <string notr="true">#btnSearchElement {
 	background-color: transparent;
