--- a/about.ui
+++ b/about.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
+    <width>319</width>
     <height>318</height>
    </rect>
   </property>
@@ -31,7 +31,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="resources.qrc">:/Resources/registro_icon.png</pixmap>
+     <pixmap resource="Resource.qrc">:/resources/Resources/registro_icon.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -42,7 +42,7 @@
      <rect>
       <x>20</x>
       <y>160</y>
-      <width>271</width>
+      <width>281</width>
       <height>20</height>
      </rect>
     </property>
@@ -54,7 +54,7 @@
      </font>
     </property>
     <property name="text">
-     <string>Product Info:</string>
+     <string>Compiled on:  </string>
     </property>
    </widget>
    <widget class="QLabel" name="lblOs">
@@ -62,7 +62,7 @@
      <rect>
       <x>20</x>
       <y>190</y>
-      <width>271</width>
+      <width>281</width>
       <height>20</height>
      </rect>
     </property>
@@ -82,7 +82,7 @@
      <rect>
       <x>20</x>
       <y>220</y>
-      <width>271</width>
+      <width>281</width>
       <height>20</height>
      </rect>
     </property>
@@ -102,7 +102,7 @@
      <rect>
       <x>20</x>
       <y>250</y>
-      <width>81</width>
+      <width>101</width>
       <height>20</height>
      </rect>
     </property>
@@ -123,15 +123,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>300</width>
-     <height>25</height>
+     <width>319</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="Resource.qrc"/>
+  <include location="Resource.qrc"/>
  </resources>
  <connections/>
 </ui>
