--- a/registro_main_gui.ui
+++ b/registro_main_gui.ui
@@ -14,8 +14,8 @@
    <string>Registro - v1.1</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="resources.qrc">
-    <normaloff>:/Resources/registro_icon_application.png</normaloff>:/Resources/registro_icon_application.png</iconset>
+   <iconset resource="Resource.qrc">
+    <normaloff>:/resources/Resources/registro_icon_application.png</normaloff>:/resources/Resources/registro_icon_application.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -67,8 +67,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
-             <normaloff>:/Resources/add.png</normaloff>:/Resources/add.png</iconset>
+            <iconset resource="Resource.qrc">
+             <normaloff>:/resources/Resources/add.png</normaloff>:/resources/Resources/add.png</iconset>
            </property>
           </widget>
          </item>
@@ -87,8 +87,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
-             <normaloff>:/Resources/edit.png</normaloff>:/Resources/edit.png</iconset>
+            <iconset resource="Resource.qrc">
+             <normaloff>:/resources/Resources/edit.png</normaloff>:/resources/Resources/edit.png</iconset>
            </property>
           </widget>
          </item>
@@ -108,20 +108,20 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
-             <normaloff>:/Resources/load.png</normaloff>:/Resources/load.png</iconset>
+            <iconset resource="Resource.qrc">
+             <normaloff>:/resources/Resources/load.png</normaloff>:/resources/Resources/load.png</iconset>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QPushButton" name="btnLoadBadElements">
            <property name="styleSheet">
-            <string notr="true">#btnLoadBadVotes {
+            <string notr="true">#btnLoadBadElements {
 	background-color: transparent;
 	border: none;
     background: none;
 }
-#btnLoadBadVotes:pressed {
+#btnLoadBadElements:pressed {
 	background-color: #b3e6ff;
 }</string>
            </property>
@@ -129,8 +129,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
-             <normaloff>:/Resources/less_than_five.png</normaloff>:/Resources/less_than_five.png</iconset>
+            <iconset resource="Resource.qrc">
+             <normaloff>:/resources/Resources/less_than_five.png</normaloff>:/resources/Resources/less_than_five.png</iconset>
            </property>
           </widget>
          </item>
@@ -199,8 +199,8 @@
             <string/>
            </property>
            <property name="icon">
-            <iconset resource="resources.qrc">
-             <normaloff>:/Resources/search.png</normaloff>:/Resources/search.png</iconset>
+            <iconset resource="Resource.qrc">
+             <normaloff>:/resources/Resources/search.png</normaloff>:/resources/Resources/search.png</iconset>
            </property>
           </widget>
          </item>
@@ -217,7 +217,7 @@
      <x>0</x>
      <y>0</y>
      <width>731</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -263,7 +263,7 @@
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
-  <include location="resources.qrc"/>
+  <include location="Resource.qrc"/>
  </resources>
  <connections/>
 </ui>
