--- a/about.ui
+++ b/about.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>319</width>
-    <height>318</height>
+    <width>433</width>
+    <height>163</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,10 +21,10 @@
    <widget class="QLabel" name="iconShow">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>10</y>
-      <width>181</width>
-      <height>131</height>
+      <x>10</x>
+      <y>30</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="text">
@@ -37,71 +37,11 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="lblPr">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>160</y>
-      <width>281</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Compiled on:  </string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblOs">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>190</y>
-      <width>281</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>OS Type:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="lblAuthor">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>220</y>
-      <width>281</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Author:</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lblVersion">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>250</y>
+      <x>130</x>
+      <y>100</y>
       <width>101</width>
       <height>20</height>
      </rect>
@@ -109,12 +49,72 @@
     <property name="font">
      <font>
       <pointsize>10</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
+      <weight>50</weight>
+      <bold>false</bold>
      </font>
     </property>
     <property name="text">
-     <string>Version:</string>
+     <string>Version:  </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblOs">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>40</y>
+      <width>281</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Platform:  </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblAuthor">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>70</y>
+      <width>281</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Copyright:  </string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lblPr">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>281</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string>Build Info:  </string>
     </property>
    </widget>
   </widget>
@@ -123,7 +123,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>319</width>
+     <width>433</width>
      <height>21</height>
     </rect>
    </property>
