--- a/subjects.ui
+++ b/subjects.ui
@@ -6,28 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>827</width>
-    <height>440</height>
+    <width>526</width>
+    <height>454</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>delete/Edit a subject</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/Resources/registro_icon.png</normaloff>:/Resources/registro_icon.png</iconset>
+   <iconset resource="Resource.qrc">
+    <normaloff>:/resources/Resources/registro_icon_application.png</normaloff>:/resources/Resources/registro_icon_application.png</iconset>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QLabel" name="lblSubject">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>70</x>
      <y>20</y>
      <width>121</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Lists of subjects:</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QPlainTextEdit" name="txtSub">
@@ -35,7 +35,7 @@
     <rect>
      <x>20</x>
      <y>50</y>
-     <width>401</width>
+     <width>181</width>
      <height>361</height>
     </rect>
    </property>
@@ -56,23 +56,23 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>610</x>
-     <y>30</y>
+     <x>330</x>
+     <y>20</y>
      <width>101</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Edit a subjet:</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Edit a subjet:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="spnIdUp">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>60</y>
-     <width>71</width>
-     <height>29</height>
+     <x>340</x>
+     <y>50</y>
+     <width>51</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="minimum">
@@ -82,10 +82,10 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>70</y>
-     <width>31</width>
-     <height>16</height>
+     <x>260</x>
+     <y>50</y>
+     <width>61</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -95,33 +95,33 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>110</y>
-     <width>121</width>
+     <x>260</x>
+     <y>80</y>
+     <width>81</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>new subject name:</string>
+    <string>Subject name:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lnNameUp">
    <property name="geometry">
     <rect>
-     <x>640</x>
-     <y>110</y>
+     <x>340</x>
+     <y>80</y>
      <width>171</width>
-     <height>28</height>
+     <height>16</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="btnUpdate">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>150</y>
-     <width>321</width>
-     <height>28</height>
+     <x>260</x>
+     <y>110</y>
+     <width>251</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -131,23 +131,23 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>600</x>
-     <y>220</y>
+     <x>330</x>
+     <y>230</y>
      <width>121</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Delete a subject:</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt; font-weight:600;&quot;&gt;Delete a subject:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QSpinBox" name="spnIdDel">
    <property name="geometry">
     <rect>
-     <x>670</x>
-     <y>250</y>
-     <width>71</width>
-     <height>29</height>
+     <x>340</x>
+     <y>260</y>
+     <width>61</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="minimum">
@@ -157,7 +157,7 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>580</x>
+     <x>260</x>
      <y>260</y>
      <width>31</width>
      <height>16</height>
@@ -170,10 +170,10 @@
   <widget class="QPushButton" name="btnDel">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>300</y>
-     <width>321</width>
-     <height>28</height>
+     <x>260</x>
+     <y>290</y>
+     <width>251</width>
+     <height>21</height>
     </rect>
    </property>
    <property name="text">
@@ -183,14 +183,14 @@
   <widget class="QPushButton" name="btnRefresh">
    <property name="geometry">
     <rect>
-     <x>553</x>
-     <y>400</y>
-     <width>181</width>
+     <x>260</x>
+     <y>380</y>
+     <width>251</width>
      <height>28</height>
     </rect>
    </property>
    <property name="text">
-    <string>Refresh Subject List</string>
+    <string>Load/Refresh Subjects</string>
    </property>
   </widget>
  </widget>
